# QMaterialCraft

./: .gitignore  CMakeLists.txt  README.md  demogallary.cpp  demogallary.h  demogallary.ui
gallery/: demogallary.cpp  main.cpp
gallery/helpers/: buttongalleries.cpp  buttongalleries.h  calendarwidgetgallery.cpp  calendarwidgetgallery.h  cardgallery.cpp  cardgallery.h  demogallerytabhelper.cpp  demogallerytabhelper.h  imagewidgetgallery.cpp  imagewidgetgallery.h  labelgallery.cpp  labelgallery.h  list_vw_gallery.cpp  list_vw_gallery.h  markdownbrowsergallery.cpp  markdownbrowsergallery.h  progressbargallery.cpp  progressbargallery.h  slidergallery.cpp  slidergallery.h  tabel_vw_gallery.cpp  tabel_vw_gallery.h  textfieldgallery.cpp  textfieldgallery.h  textgallery.cpp  textgallery.h  toolboxgallery.cpp  toolboxgallery.h  toolbuttongallery.cpp  toolbuttongallery.h  tree_wv_gallery.cpp  tree_wv_gallery.h
widgets/: CCWidgets_BuildDefine.h  CMakeLists.txt
widgets/CCButton/: button.cpp  button.h  buttonpaintcontext.cpp  buttonpaintcontext.h
widgets/CCCalendarWidget/: calendarwidgetpaintcontext.cpp  calendarwidgetpaintcontext.h  cccalendarwidget.cpp  cccalendarwidget.h
widgets/CCCards/: cccard.cpp  cccard.h
widgets/CCCards/privates/: cccard_components_name.h  cccardactions.cpp  cccardactions.h  cccardcontent.cpp  cccardcontent.h  cccardheader.cpp  cccardheader.h
widgets/CCImageWidget/: ccimagewidget.cpp  ccimagewidget.h  imagewidgetpaintcontext.cpp  imagewidgetpaintcontext.h
widgets/CCLabel/: ccbadgelabel.cpp  ccbadgelabel.h  cclabel.cpp  cclabel.h  labelpaintcontext.cpp  labelpaintcontext.h
widgets/CCMarkdownWidget/: ccmarkdownbrowserwidget.cpp  ccmarkdownbrowserwidget.h  cmarkdowncardwidget.cpp  cmarkdowncardwidget.h
widgets/CCMarkdownWidget/privates/: markdownhighlighter.cpp  markdownhighlighter.h
widgets/CCProgressBar/: progressbar.cpp  progressbar.h  progressbarpaintcontext.cpp  progressbarpaintcontext.h
widgets/CCSlider/: slider.cpp  slider.h  sliderpaintcontext.cpp  sliderpaintcontext.h
widgets/CCTextField/: cctextfield.cpp  cctextfield.h  cctextfieldpaintcontext.cpp  cctextfieldpaintcontext.h
widgets/CCToolBox/: cctoolbox.cpp  cctoolbox.h  toolboxpaintcontext.cpp  toolboxpaintcontext.h
widgets/CCToolButton/: cctoolbutton.cpp  cctoolbutton.h  toolbuttonpaintcontext.cpp  toolbuttonpaintcontext.h
widgets/Commons/: TextIndiator.h  ThemeMarker.h  animation_helpers.cpp  animation_helpers.h  colorhelper.cpp  colorhelper.h  containercommondelegate.cpp  containercommondelegate.h  context_request_headers.h  context_request_macros.h  paintcontext.cpp  paintcontext.h  paintcontextallocator.cpp  paintcontextallocator.h  property_string.h
widgets/Composers/CCListView/: cclistview.cpp  cclistview.h  listviewpaintcontext.cpp  listviewpaintcontext.h
widgets/Composers/CCListWidget/: cclistwidget.cpp  cclistwidget.h  listwidgetpaintcontext.cpp  listwidgetpaintcontext.h
widgets/Composers/CCTableView/: cctableview.cpp  cctableview.h  tableviewpaintcontext.cpp  tableviewpaintcontext.h
widgets/Composers/CCTableWidget/: cctablewidget.cpp  cctablewidget.h  tablewidgetpaintcontext.cpp  tablewidgetpaintcontext.h
widgets/Composers/CCTreeView/: cctreeview.cpp  cctreeview.h  treeviewpaintcontext.cpp  treeviewpaintcontext.h
widgets/Composers/CCTreeWidget/: cctreewidget.cpp  cctreewidget.h  treewidgetpaintcontext.cpp  treewidgetpaintcontext.h
widgets/Composers/privates/: container_delegates_keys.h  containercommondelegate.h  containerpaintcontext.cpp  containerpaintcontext.h
widgets/helpers/: commonwidgetsettingshelper.cpp  commonwidgetsettingshelper.h  widgetlayouthelper.cpp  widgetlayouthelper.h
widgets/helpers/animations/: appearanimation.cpp  appearanimation.h  commons.cpp  commons.h  floativeanimation.cpp  floativeanimation.h  hovercoloranimation.cpp  opacityanimation.h  rippleanimation.h  shadowoffsetsanimationhelper.cpp  shadowoffsetsanimationhelper.h
widgets/setups/: paintcontextregisters.cpp  paintcontextregisters.h
widgets/setups/material/: materialpaintcontextregisters.cpp  materialpaintcontextregisters.h
widgets/themes/material/: MaterialPropertyString.h  MaterialThemeMarker.h  buttonmaterialpaintcontext.cpp  buttonmaterialpaintcontext.h  imagewidgetmaterialpaintcontext.cpp  imagewidgetmaterialpaintcontext.h  labelbadgematerialpaintcontext.cpp  labelbadgematerialpaintcontext.h  labelmaterialpaintcontext.cpp  labelmaterialpaintcontext.h  material_color_helper.cpp  material_color_helper.h  materiallistviewpaintcontext.cpp  materiallistviewpaintcontext.h  materiallistwidgetpaintcontext.cpp  materiallistwidgetpaintcontext.h  materialtableviewpaintcontext.cpp  materialtableviewpaintcontext.h  materialtablewidgetpaintcontext.cpp  materialtablewidgetpaintcontext.h  materialtextindicator.cpp  materialtextindicator.h  materialtreeviewpaintcontext.cpp  materialtreeviewpaintcontext.h  materialtreewidgetpaintcontext.cpp  materialtreewidgetpaintcontext.h  progressbarmaterialpaintcontext.cpp  progressbarmaterialpaintcontext.h  slidermaterialpaintcontext.cpp  slidermaterialpaintcontext.h  toolbuttonmaterialpaintcontext.cpp  toolbuttonmaterialpaintcontext.h
widgets/themes/material/animation_wrapper/: floativeanimation.cpp  floativeanimation.h  hoveranimationhelper.cpp  hoveranimationhelper.h  opacityanimation.cpp  rippleanimation.cpp  rippleanimation.h  shadowoffsetsanimationhelper.cpp  shadowoffsetsanimationhelper.h
widgets/themes/material/calendar/: calendarwidgetmaterialpaintcontext.cpp  calendarwidgetmaterialpaintcontext.h
widgets/themes/material/commons/: materialcontainerdefaultpaintcontext.cpp  materialcontainerdefaultpaintcontext.h
widgets/themes/material/components/: cardmaterialpaintcontext.cpp  cardmaterialpaintcontext.h  cctextfieldmaterialpaintcontext.cpp  cctextfieldmaterialpaintcontext.h
widgets/themes/material/delegates/: materialcontainercommondelegate.cpp  materialcontainercommondelegate.h
widgets/themes/material/toolbox/: materialheaderbar.cpp  materialheaderbar.h  materialtoolboxpaintcontext.cpp  materialtoolboxpaintcontext.h
(+2 files in other folders)
